--- a/towers/index.html
+++ b/towers/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tic Tac Toe</title>
-    <link rel="stylesheet" type="text/css" href="./css/ttt.css">
+    <title>Towers of Hanoi</title>
+    <link rel="stylesheet" type="text/css" href="./css/towers.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/bundle.js"></script>
   </head>
 
   <body>
-    <h1>Tic Tac Toe</h1>
+    <h1>Towers of Hanoi</h1>
 
-    <figure class="ttt"></figure>
+    <figure class="towers"></figure>
   </body>
 </html>
