added background image

--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -9,6 +9,7 @@
 
     <style>
     body {
+      /*background-image: url('https://us.123rf.com/450wm/antarts/antarts1605/antarts160500007/56427776-illustrated-portrait-of-capybara-cute-face-of-wild-capybara-on-blue-background.jpg?ver=6');*/
       background-image: url('https://us.123rf.com/450wm/antarts/antarts1605/antarts160500026/56427915-illustrated-portrait-of-capybara-cute-face-of-wild-capybara-on-green-background.jpg?ver=6');
       background-repeat: no-repeat;
       background-position: 500px 80px;
